force-app/main/default/objects/CLQ_Inspection__c/fields/Rating_Proposed_By_Program__c.field-meta.xml
<CustomField>
    <fullName>Rating_Proposed_By_Program__c</fullName>
    <description>Gets the Rating_Proposed_By_Program__c value from the PT</description>
    <formula>TEXT(CLQ_Program_Transaction__r.Rating_Proposed_By_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Proposed By Program</label>
    <type>Text</type>
</CustomField>