force-app/main/default/objects/CLQ_Inspection__c/fields/Ratio_Group_Size_Domain_Points__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Group_Size_Domain_Points__c</fullName>
    <label>Ratio Domain Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>