force-app/main/default/objects/CLQ_Inspection__c/fields/SQ_PD_Domain_Points__c.field-meta.xml
<CustomField>
    <fullName>SQ_PD_Domain_Points__c</fullName>
    <label>SQ&amp;PD Domain Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>