force-app/main/default/objects/CLQ_Inspection__c/fields/SQ_PD_Domain_Rating__c.field-meta.xml
<CustomField>
    <fullName>SQ_PD_Domain_Rating__c</fullName>
    <label>SQ&amp;PD Domain Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>