force-app/main/default/objects/CLQ_Inspection__c/fields/SUTQ_Certificate_Onsite_Rating_Form_Num__c.field-meta.xml
<CustomField>
    <fullName>SUTQ_Certificate_Onsite_Rating_Form_Num__c</fullName>
    <formula>IF( ISPICKVAL( Onsite_Rating__c , &quot;1&quot;),&quot;JFS 01571 (rev. 12/2016)&quot;, 
IF( ISPICKVAL( Onsite_Rating__c , &quot;2&quot;),&quot;JFS 01572 (rev. 12/2016)&quot;, 
IF( ISPICKVAL( Onsite_Rating__c , &quot;3&quot;),&quot;JFS 01573 (rev. 12/2016)&quot;, 
IF( ISPICKVAL( Onsite_Rating__c , &quot;4&quot;),&quot;JFS 01594 (rev. 12/2016)&quot;, 
IF( ISPICKVAL( Onsite_Rating__c , &quot;5&quot;),&quot;JFS 01595 (rev. 12/2016)&quot;, 
&quot;&quot; 
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUTQ Certificate Onsite Rating Form Num</label>
    <type>Text</type>
</CustomField>