force-app/main/default/objects/CLQ_Inspection__c/fields/Visit_Information_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Information_Count__c</fullName>
    <label>Visit Information Count</label>
    <summaryForeignKey>Visit_Information__c.Inspection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>