force-app/main/default/objects/CLQ_Inspection__c/fields/X2star_re_reg_field__c.field-meta.xml
<CustomField>
    <fullName>X2star_re_reg_field__c</fullName>
    <description>This field is used for referencing 2 star date on the program</description>
    <formula>IF(ISBLANK(CLQ_Program__r.CLQ_2_Star_Reapplying_Date__c) , DATE(9999,09,09) , CLQ_Program__r.CLQ_2_Star_Reapplying_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for referencing 2 star date on the program</inlineHelpText>
    <label>2star re-reg field</label>
    <type>Date</type>
</CustomField>