force-app/main/default/objects/CLQ_Inspection__c/recordTypes/CLQ_Day_Camp_Audit.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Day_Camp_Audit</fullName>
    <active>true</active>
    <description>Day Camp Audit for Day Camp Registration</description>
    <label>Day Camp Audit</label>
</RecordType>