force-app/main/default/objects/CLQ_Inspection__c/recordTypes/CLQ_Inspection.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Inspection</fullName>
    <active>true</active>
    <label>Inspection</label>
</RecordType>