force-app/main/default/objects/CLQ_Inspection__c/recordTypes/Onsite_Visit_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Onsite_Visit_Record_Type</fullName>
    <active>true</active>
    <description>Record type belongs to Inspection Object</description>
    <label>Onsite Visit Record Type</label>
</RecordType>