force-app/main/default/objects/CLQ_Inspection__c/validationRules/CLQ_cannot_change_scope_tool_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_cannot_change_scope_tool_selected</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( RecordType.Name = &apos;Inspection&apos;,ISCHANGED(CLQ_Scope__c) &amp;&amp; (NOT(ISBLANK(CLQ_Inspection_Tool__c)) || NOT(ISBLANK(CLQ_Recommended_Inspection_Tool__c))))</errorConditionFormula>
    <errorMessage>Scope of the Inspection cannot be changed when Inspection tool is already selected</errorMessage>
</ValidationRule>