force-app/main/default/objects/CLQ_Inspection__c/validationRules/CLQ_Inspection_Status_Change_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Inspection_Status_Change_Approved</fullName>
    <active>false</active>
    <description>Description	TFS#16617
Inspection status can not be changed when Inspection is in Approved status.</description>
    <errorConditionFormula>AND
(
ISCHANGED( CLQ_Inspection_Status__c),
ISPICKVAL(PRIORVALUE( CLQ_Inspection_Status__c), &quot;Approved&quot;),
ISPICKVAL( CLQ_Inspection_Status__c, &quot;Approved&quot;) 

)</errorConditionFormula>
    <errorMessage>Inspection status can not be changed when Inspection is in Approved status.</errorMessage>
</ValidationRule>