force-app/main/default/objects/CLQ_Inspection__c/validationRules/CLQ_On_Site_Representative_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_On_Site_Representative_Validation</fullName>
    <active>true</active>
    <description>On site representative is mandatory If &apos;yes&apos; is selected for On-site representative present.</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; (IF
(AND
(ISPICKVAL(CLQ_On_Site_Representative_Present__c ,&quot;Yes&quot;), ISBLANK(CLQ_On_Site_Representative__c)), true,false))</errorConditionFormula>
    <errorDisplayField>CLQ_On_Site_Representative__c</errorDisplayField>
    <errorMessage>Please enter On Site Representative</errorMessage>
</ValidationRule>