force-app/main/default/objects/CLQ_Inspection__c/validationRules/CLQ_Reviewers_Cannot_Change_Visit_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Reviewers_Cannot_Change_Visit_Status</fullName>
    <active>false</active>
    <description>#14785 - Reviewers should not be able to edit Visit status manually</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp;
CONTAINS($Profile.Name, &apos;Reviewer&apos;) &amp;&amp;  ISCHANGED(CLQ_Visit_Status__c )</errorConditionFormula>
    <errorMessage>You cannot manually change the Visit Status</errorMessage>
</ValidationRule>