force-app/main/default/objects/CLQ_Inspection__c/validationRules/Inspection_Capacity_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Capacity_check</fullName>
    <active>false</active>
    <description>Check Approved_Total_Capacity__c and Approved_Total_Capacity_Under_2_1_2__c fields are not null and values are below 3.</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; ISPICKVAL(CLQ_Inspection_Type__c, &apos;Pre-license&apos;) &amp;&amp; OR(ISBLANK(Approved_Total_Capacity__c), ISBLANK(Approved_Total_Capacity_Under_2_1_2__c),Approved_Total_Capacity__c&gt;3,Approved_Total_Capacity_Under_2_1_2__c&gt;3)</errorConditionFormula>
    <errorMessage>Recommended Total Capacity and Recommended Total Capacity Under 2 1/2 should not be blank and value should not be greater than 3.</errorMessage>
</ValidationRule>