force-app/main/default/objects/CLQ_Inspection__c/listViews/Approved_Inspections.listView-meta.xml
<ListView>
    <fullName>Approved_Inspections</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CLQ_Program_Record_Type__c</columns>
    <columns>Program_Jurisdiction__c</columns>
    <columns>CLQ_Inspection_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Inspection_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Inspections</label>
</ListView>