force-app/main/default/objects/CLQ_Inspection__c/listViews/Center_Inactive_User_CLQ_Inspection.listView-meta.xml
<ListView>
    <fullName>Center_Inactive_User_CLQ_Inspection</fullName>
    <filterScope>Queue</filterScope>
    <label>Center - Inactive User</label>
    <queue>Center_Inactive_User</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>