force-app/main/default/objects/CLQ_Inspection__c/listViews/CLQ_All_Inspections.listView-meta.xml
<ListView>
    <fullName>CLQ_All_Inspections</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Street_Address_1__c</columns>
    <columns>CLQ_Program__c</columns>
    <columns>CLQ_Inspection_Type__c</columns>
    <columns>Program_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CLQ_Inspection_Owner__c</columns>
    <columns>CLQ_Inspection_Status__c</columns>
    <columns>CLQ_Program_Status__c</columns>
    <columns>CLQ_Program_Record_Type__c</columns>
    <columns>CLQ_Total_Risk_Points__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Inspections</label>
</ListView>