force-app/main/default/objects/CLQ_Inspection__c/listViews/CLQ_All_Open_Inspections.listView-meta.xml
<ListView>
    <fullName>CLQ_All_Open_Inspections</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Inspection_Status__c</columns>
    <columns>CLQ_Method__c</columns>
    <columns>CLQ_Program__c</columns>
    <columns>Program_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CLQ_Inspection_Type__c</columns>
    <columns>CLQ_Program_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Inspection_Status__c</field>
        <operation>equals</operation>
        <value>Pending Processing,In Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CLQ_Inspection__c.CLQ_Inspection</value>
    </filters>
    <filters>
        <field>Program_Jurisdiction__c</field>
        <operation>equals</operation>
        <value>ODE</value>
    </filters>
    <label>All Open Inspections</label>
</ListView>