force-app/main/default/objects/CLQ_Inspection__c/listViews/Dayton_District_FCC_SUTQ_queue_CLQ_Inspection.listView-meta.xml
<ListView>
    <fullName>Dayton_District_FCC_SUTQ_queue_CLQ_Inspection</fullName>
    <filterScope>Queue</filterScope>
    <label>Dayton District FCC SUTQ queue</label>
    <queue>Dayton_District_FCC_SUTQ_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>