force-app/main/default/objects/CLQ_Inspection__c/listViews/DC_Admin_CLQ_Inspection.listView-meta.xml
<ListView>
    <fullName>DC_Admin_CLQ_Inspection</fullName>
    <filterScope>Queue</filterScope>
    <label>DC - Admin</label>
    <queue>DC_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>