force-app/main/default/objects/CLQ_Inspection__c/listViews/Enforcement.listView-meta.xml
<ListView>
    <fullName>Enforcement</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Program__c</columns>
    <columns>CLQ_Inspection_Status__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>CLQ_Inspection_Type__c</columns>
    <columns>CLQ_Type__c</columns>
    <columns>CLQ_Program_Name__c</columns>
    <columns>CLQ_Program_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Program_Status__c</field>
        <operation>equals</operation>
        <value>Enforcement</value>
    </filters>
    <label>Enforcement</label>
</ListView>