force-app/main/default/objects/CLQ_Inspection__c/listViews/FCC_Inactive_User_CLQ_Inspection.listView-meta.xml
<ListView>
    <fullName>FCC_Inactive_User_CLQ_Inspection</fullName>
    <filterScope>Queue</filterScope>
    <label>FCC- Inactive User</label>
    <queue>FCC_Inactive_User</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>