force-app/main/default/objects/CLQ_Inspection__c/listViews/Inspection_Locked_for.listView-meta.xml
<ListView>
    <fullName>Inspection_Locked_for</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CLQ_Inspection_Status__c</columns>
    <columns>CLQ_Program__c</columns>
    <columns>Program_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Offline_Lock__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Inspection Locked for Offline Mode</label>
</ListView>