force-app/main/default/objects/CLQ_Inspection__c/listViews/Inspections_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Inspections_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Onsite_Rating__c</columns>
    <columns>CLQ_Program__c</columns>
    <columns>CLQ_Program_Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CLQ_Inspection__c.Onsite_Visit_Record_Type</value>
    </filters>
    <filters>
        <field>CLQ_Inspection_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <filters>
        <field>CLQ_Inspection_Type__c</field>
        <operation>equals</operation>
        <value>Annual,Compliance</value>
    </filters>
    <label>Inspections Pending Approval</label>
    <sharedTo>
        <role>State_Admin</role>
    </sharedTo>
</ListView>