force-app/main/default/objects/CLQ_Inspection__c/listViews/Inspections_to_Perform.listView-meta.xml
<ListView>
    <fullName>Inspections_to_Perform</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Program__c</columns>
    <columns>CLQ_Inspection_Type__c</columns>
    <columns>CLQ_Inspection_Status__c</columns>
    <columns>CLQ_Inspection_Owner__c</columns>
    <columns>CLQ_CAP_Generated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Inspection_Owner__c</field>
        <operation>equals</operation>
        <value>Park Johnson (Licensing Inspector)</value>
    </filters>
    <label>Inspections to Perform</label>
</ListView>